--- a/Documents/NetBeansProjects/trabajo/public_html/repositorio2.html
+++ b/Documents/NetBeansProjects/trabajo/public_html/repositorio2.html
@@ -6,11 +6,11 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>repositorio2</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+        <div>repositorio2</div>
     </body>
 </html>
